# tello_ros

./: .dockerignore  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  package.xml  run_nvidia.sh
.github/workflows/: docker_image.yml
docker/: Dockerfile
docker/eloquent/: Dockerfile
h264decoder/: h264decoder_python.cpp
src/: blocking_udp_echo_client.cpp  blocking_udp_echo_server.cpp  tello_driver.cpp  tello_emulator.cpp
tello_description/: CMakeLists.txt  package.xml
tello_description/launch/: robot_state_publisher_launch.py  rsp_launch.py
tello_description/src/: replace.py
tello_description/urdf/: tello.urdf  tello.xml
tello_driver/: CMakeLists.txt  README.md  package.xml
tello_driver/cfg/: camera_info.txt  camera_info.yaml
tello_driver/h264decoder/: h264decoder.cpp  h264decoder.hpp  readme.md
tello_driver/include/: context_macros.hpp  tello_driver.hpp  tello_driver_node.hpp  tello_joy_node.hpp
tello_driver/launch/: emulator_launch.py  emulators_launch.py  teleop_launch.py
tello_driver/scripts/: driver_test.sh  test_cmd_vel.sh  test_srv.sh
tello_driver/src/: command_socket.cpp  get_camera_info.cpp  state_socket.cpp  tello_driver.cpp  tello_driver_main.cpp  tello_driver_node.cpp  tello_emulator.cpp  tello_joy.cpp  tello_joy_main.cpp  tello_joy_node.cpp  tello_socket.cpp  video_socket.cpp
tello_gazebo/: CMakeLists.txt  README.md  package.xml
tello_gazebo/include/: pid.hpp
tello_gazebo/launch/: sim_launch.py  simple_launch.py  vlam_launch.py
tello_gazebo/models/marker_0/: model.config  model.sdf
tello_gazebo/models/marker_0/materials/scripts/: marker_0.material
tello_gazebo/models/marker_0_pad/: model.config  model.sdf
tello_gazebo/models/marker_0_pad/materials/scripts/: marker_0_num.material
tello_gazebo/models/marker_1/: model.config  model.sdf
tello_gazebo/models/marker_1/materials/scripts/: marker_1.material
tello_gazebo/models/marker_1_pad/: model.config  model.sdf
tello_gazebo/models/marker_1_pad/materials/scripts/: marker_1_num.material
tello_gazebo/models/marker_2/: model.config  model.sdf
tello_gazebo/models/marker_2/materials/scripts/: marker_2.material
tello_gazebo/models/marker_2_pad/: model.config  model.sdf
tello_gazebo/models/marker_2_pad/materials/scripts/: marker_2_num.material
tello_gazebo/models/marker_3/: model.config  model.sdf
tello_gazebo/models/marker_3/materials/scripts/: marker_3.material
tello_gazebo/models/marker_3_pad/: model.config  model.sdf
tello_gazebo/models/marker_3_pad/materials/scripts/: marker_3_num.material
tello_gazebo/models/marker_4/: model.config  model.sdf
tello_gazebo/models/marker_4/materials/scripts/: marker_4.material
tello_gazebo/models/marker_4_pad/: model.config  model.sdf
tello_gazebo/models/marker_4_pad/materials/scripts/: marker_4_num.material
tello_gazebo/models/marker_5/: model.config  model.sdf
tello_gazebo/models/marker_5_pad/: model.config  model.sdf
tello_gazebo/models/marker_5_pad/materials/scripts/: marker_5.material  marker_5_num.material
tello_gazebo/models/marker_6/: model.config  model.sdf
tello_gazebo/models/marker_6/materials/scripts/: marker_6.material
tello_gazebo/models/marker_6_pad/: model.config  model.sdf
tello_gazebo/models/marker_6_pad/materials/scripts/: marker_6_num.material
tello_gazebo/models/marker_7/: model.config  model.sdf
tello_gazebo/models/marker_7_pad/: model.config  model.sdf
tello_gazebo/models/marker_7_pad/materials/scripts/: marker_7.material  marker_7_num.material
tello_gazebo/scripts/: two_drones_rc.bash  two_drones_twist.bash
tello_gazebo/src/: inject_entity.py  tello_plugin.cpp
tello_gazebo/worlds/: aruco.world  build_world.py  f2.world  f2_map.yaml  fiducial.world  fiducial_map.yaml  simple.world  tello.world
tello_msgs/: CMakeLists.txt  package.xml
tello_msgs/msg/: FlightData.msg  Flip.msg  TelloResponse.msg
tello_msgs/srv/: TelloCommand.srv
