<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>tello_driver</name>
  <version>0.0.0</version>
  <description>ROS2 Tello driver</description>

  <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
  <license>BSD</license>

  <url type="repository">TODO</url>
  <url type="bugtracker">TODO</url>

  <author>Clyde McQueen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
